objects/Flosum__Branch__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branch_Description__c</fullName>
        <label>Branch Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Updated On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Merged_to_Repository__c</fullName>
        <defaultValue>false</defaultValue>
        <description>- If checked, this branch record has been merged to repository
- If NOT checked, this branch is not merged yet.</description>
        <inlineHelpText>- If checked, this branch record has been merged to repository 
- If NOT checked, this branch is not merged yet.</inlineHelpText>
        <label>Merged to Repository?</label>
        <type>Checkbox</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Branch_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Branch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>